--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
             <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about-section">About</a>
+            <a class="nav-link" href="#about-section">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Our Services">Our Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#courses">Courses</a>
+            <a class="nav-link" href="#courses">Our Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#team">Team</a>
+            <a class="nav-link" href="#team">Team Members</a>
           </li>
             <li class="nav-item">
             <a class="nav-link" href="#contact-section">Contact Us</a>
